# demo

./: Cargo.toml  command.txt
guest/: Cargo.toml  guest.wasm
guest/src/: lib.rs
guest/test/: integration_test.rs
host/: Cargo.toml
host/src/: main.rs
host/test/: integration_test.rs
wit/: complex.wit  demo.wit  http-types.wit  inbound-http.wit  sum.wit
