[package]
name = "host"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
tokio = {version = "1.37.0",features = ["full"]}
# wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", features = ["component-model"] }
# wasmtime = { version = "10.0.1", features = ["component-model"] }
wasmtime = { version = "19.0.0", features = ['component-model'] }
wasmtime-wasi =  { version = "19.0.0" }
